# ComfyUI-PromptHistoryGallery

./: .gitignore  .prettierignore  AGENTS.md  GEMINI.md  README.md  __init__.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  publish.yml
prompt_history_gallery/: __init__.py  history_watcher.py  hooks.py  metadata_parser.py  models.py  normalizers.py  registry.py  serialization.py  storage.py
prompt_history_gallery/data/: .gitignore
prompt_history_gallery/nodes/: __init__.py  prompt_input.py
scripts/: format.sh
web/: history_dialog.js  history_sidebar.js  style.css
web/lib/: assetLoader.js  comfyBridge.js  dom.js  historyApi.js  imageSources.js  metadata.js  numberUtils.js  previewNotifier.js  previewSettings.js  viewerBridge.js
